# weatherbot

./: .env.example  .gitignore  AGENTS.md  README.md  bot_v2.py  config.json  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-市场语义与扫描基线/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: strategy-profile-playbook.md
tests/: conftest.py  test_cli.py  test_modular_entrypoint.py  test_persistence.py  test_phase1_guardrails.py  test_phase1_market_semantics.py  test_phase1_reporting.py  test_phase1_scan_loop.py  test_phase2_probability.py  test_phase2_quotes.py  test_phase2_reporting.py  test_phase2_strategies.py  test_phase3_reporting.py  test_phase3_router.py  test_phase3_scan_loop.py  test_phase4_orders.py  test_phase4_reporting.py  test_phase4_restore.py  test_phase4_scan_loop.py  test_phase5_paper_execution.py  test_phase5_replay.py  test_phase5_scan_loop.py  test_strategy_paper_execution.py
tests/fixtures/: phase1_gamma_event.json  phase1_weather_snapshot.json  phase2_clob_book_no.json  phase2_clob_book_yes.json  phase2_gamma_event.json  phase2_weather_snapshot.json
weatherbot/: __init__.py  cli.py  config.py  domain.py  forecasts.py  paper_execution.py  paths.py  persistence.py  polymarket.py  reporting.py  strategy.py
(+110 files in other folders)
