[project]
name = "weatherbot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "--cov=weatherbot --cov-report=term-missing --cov-fail-under=75"

[tool.coverage.run]
source = ["weatherbot"]
omit = [
    "weatherbot/__init__.py",
]

[tool.coverage.report]
omit = [
    ".planning/*",
    "tests/*",
    "bot_v2.py",
    "weatherbot/__init__.py",
]
